# conecta-plus

./: .editorconfig  .env.example  .env.production.example  .eslintrc.json  .gitignore  .prettierrc  AGENTES_IA_GUARDIAN.md  ANALISE_ESTAGIO_PROJETO.md  ANALISE_GAPS_Q1.md  ANALISE_Q2_INTELIGENCIA_PROATIVA.md  CHANGELOG.md  CLAUDE.md  DOCUMENTACAO_IA_FINANCEIRA.md  GUIA_VISUAL_GUARDIAN.md  IMPLEMENTACAO_Q1_RESUMO.md  INTEGRACAO_GUARDIAN.md  INTEGRACAO_GUARDIAN_FRONTEND.md  INVENTARIO_GUARDIAN.md  MCPS_GUARDIAN.md  MELHORIAS_APLICADAS.md  MEMORIA_SESSAO_2025-12-23.md  MEMORIA_SESSAO_20251219.md  PROGRESSO_COMPLETO_22_DEC_2025.md  PROJETO_100_PORCENTO_COMPLETO.md  README.md  RELATORIO_CORRECOES.md  RELATORIO_FINAL_IA_FINANCEIRA.md  RELATORIO_SETUP.md  ROADMAP_100_PORCENTO.md  SESSAO_20241220.md  SESSAO_CONTEXTO.md  SESSAO_GUARDIAN_20251220.md  demo_agente_ia.sh  docker-compose.base.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml  test_agente_financeiro.py  test_guardian_api.py
.claude/: CLAUDE.md  mcps-config.json
.github/workflows/: ci-cd.yml
agents/: requirements.txt
agents/acesso/: __init__.py  agent.py  agent_v2.py
agents/alarme/: agent.py  agent_v2.py
agents/analytics/: __init__.py  agent.py  agent_v2.py
agents/assembleias/: __init__.py  (+2 more)
backend/: Dockerfile  __init__.py  alembic.ini  config.py  database.py  dependencies.py  main.py  requirements.txt  telemetry.py
docker/: docker-compose.db.yml  docker-compose.frigate.yml  docker-compose.prod.yml
docs/: AGENTS_SPEC.md  ARCHITECTURE.md  RATE_LIMITING.md
edge/: README.md
guardian/: requirements.txt
monitoring/: prometheus.yml
scripts/: auto-healer.py  backup-production.sh  backup.sh  code-review.sh  complete-remaining-tasks.sh  deploy.sh  error-monitor.sh  health-check.sh  install-warmup-service.sh  knowledge-base.json  logs.sh  measure-coldstart.sh  seed_q2_data.py  smart-monitor.py  startup-warmup.sh  system-monitor.sh  warmup-service.sh  warmup.py
tests/: conftest.py
(+637 files in other folders)
